Fixed the overflow problem finally maybe?

--- a/css/betterstyles.scss
+++ b/css/betterstyles.scss
@@ -36,9 +36,8 @@ $font-stack: Roboto, sans-serif;
   width: device-width;
 }
 
-html, body{
+html{
   overflow-x: hidden !important;
-  width: 100%;
 }
 h1,h2,h3,h4,h5,p,a{
   font-family: $font-stack;
